--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -31,6 +31,7 @@
                     android:src="@drawable/search" />
 
                 <EditText
+                    android:id="@+id/search_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
@@ -46,7 +47,8 @@
         android:id="@+id/recycler_view_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/app_bar_layout_search">
+        android:layout_below="@id/app_bar_layout_search"
+        android:visibility="gone">
 
     </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
